# livekit-v1-experiment

./: .gitignore  README.md  pyproject.toml  template_env
chat_ctx_dump/: seed_conversation.json
src/: livekit_realtime_turn_detector.py  one_event_two_processes.py  programatic_function_calling.py  server_realtime_turn_detector.py  server_semantic_turn_detector.py  story_agent.py  student_agent.py  utils.py
